wire_bridge/build/log/idf_py_stderr_output_61417
Command: make -j 6 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Defaults policy: sdkconfig      
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
CMake Warning at /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/macbookair/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/macbookair/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/macbookair/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/macbookair/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/macbookair/esp-idf/components/wpa_supplicant/src' belongs to
  component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/macbookair/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/Users/macbookair/esp-idf/components/wpa_supplicant/esp_supplicant/src'
  belongs to component wpa_supplicant but is being used by component
  esp_wifi.  It is recommended to define the component dependency for
  esp_wifi on the component wpa_supplicant, i.e.  'idf_component_register(...
  PRIV_REQUIRES wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component wpa_supplicant.
Call Stack (most recent call first):
  /Users/macbookair/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /Users/macbookair/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


Configuration Report                                         
 ─────────────────────────────────────────────────────────── 
   Parser Version: 1                                         
   Verbosity: default                                        
   Defaults policy: sdkconfig                                
   Status: Finished with notifications                       
                                                             
  Default Value Mismatch                                     
   ───────────────────────────────────────────────────────   
    Using sdkconfig default values                           
    Choice symbols with different default selection          
    between sdkconfig and Kconfig                            
    LIBC_STDIN_LINE_ENDING: Kconfig default selection:       
    choice deselected, sdkconfig default selection:          
    LIBC_STDIN_LINE_ENDING_CR                                
    LIBC_STDOUT_LINE_ENDING: Kconfig default                 
    selection: choice deselected, sdkconfig default          
    selection: LIBC_STDOUT_LINE_ENDING_CRLF                  
   ───────────────────────────────────────────────────────   
 ─────────────────────────────────────────────────────────── 
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c: In function 'app_main':
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c:43:48: error: passing argument 1 of 'esp_eth_mac_new_esp32' from incompatible pointer type [-Wincompatible-pointer-types]
   43 |     esp_eth_mac_t *mac = esp_eth_mac_new_esp32(&mac_config);
      |                                                ^~~~~~~~~~~
      |                                                |
      |                                                eth_mac_config_t *
In file included from /Users/macbookair/esp-idf/components/esp_eth/include/esp_eth_driver.h:13,
                 from /Users/macbookair/esp-idf/components/esp_eth/include/esp_eth.h:15,
                 from /Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c:8:
/Users/macbookair/esp-idf/components/esp_eth/include/esp_eth_mac_esp.h:262:69: note: expected 'const eth_esp32_emac_config_t *' but argument is of type 'eth_mac_config_t *'
  262 | esp_eth_mac_t *esp_eth_mac_new_esp32(const eth_esp32_emac_config_t *esp32_config, const eth_mac_config_t *config);
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c:43:26: error: too few arguments to function 'esp_eth_mac_new_esp32'; expected 2, have 1
   43 |     esp_eth_mac_t *mac = esp_eth_mac_new_esp32(&mac_config);
      |                          ^~~~~~~~~~~~~~~~~~~~~
/Users/macbookair/esp-idf/components/esp_eth/include/esp_eth_mac_esp.h:262:16: note: declared here
  262 | esp_eth_mac_t *esp_eth_mac_new_esp32(const eth_esp32_emac_config_t *esp32_config, const eth_mac_config_t *config);
      |                ^~~~~~~~~~~~~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c:44:26: error: implicit declaration of function 'esp_eth_phy_new_lan8720'; did you mean 'esp_eth_phy_new_generic'? [-Wimplicit-function-declaration]
   44 |     esp_eth_phy_t *phy = esp_eth_phy_new_lan8720(&phy_config);
      |                          ^~~~~~~~~~~~~~~~~~~~~~~
      |                          esp_eth_phy_new_generic
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c:44:26: error: initialization of 'esp_eth_phy_t *' {aka 'struct esp_eth_phy_s *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/wire_bridge.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
